@@ -287,13 +287,13 @@ mongoc_server_description_id (const mongoc_server_description_t *description)
  *      Return a reference to the host associated with this server description.
  *
  * Returns:
- *      This server description's host, a mongoc_host_list_t * you must
+ *      This server description's host, a const mongoc_host_list_t * you must
  *      not modify or free.
  *
  *--------------------------------------------------------------------------
  */
 
-mongoc_host_list_t *
+const mongoc_host_list_t *
 mongoc_server_description_host (const mongoc_server_description_t *description)
 {
    return &((mongoc_server_description_t *) description)->host;
